--- a/13_高级IO.md
+++ b/13_高级IO.md
@@ -14,7 +14,7 @@
 * 某些ioctl操作；
 * 某些进程间通信函数。
 
-我们也曾说过，虽然读写磁盘文件会暂时阻塞调用者，但是并不能将与裁判I/O有干的系统调用视为“低速”。
+我们也曾说过，虽然读写磁盘文件会暂时阻塞调用者，但是并不能将与磁盘I/O有关的系统调用视为“低速”。
 
 非阻塞I/O使我们可以发出open、read和write这样的I/O操作，并是这些操作不会永远阻塞。如果这种操作不能完成，则调用立即出错返回，表示该操作如继续执行将阻塞。
 
@@ -51,7 +51,6 @@ fcntl记录锁
                             (set by F_GETLK and F_OFD_GETLK) */
         ...
     };
-
 ```
 
 上面提到了两种类型的锁：共享读锁和独占写锁。基本规则是：任意多个进程在一个给定的自己额上可以有一把共享的读锁，但是在一个给定字节上只能有一个进程有一把独占写锁。进一步而言，如果在一个给定字节上已经有一把或多把读锁，则不能再该字节上再加写锁；如果在一个字节上已经有一把独占写锁，则不能再对它加任何读锁。
@@ -75,7 +74,7 @@ fcntl记录锁
 这种形式的阻塞I/O导出课件。但是如果必须从两个描述符读，又将如何呢？在这种情况下，我们不能在任一个描述符上进行阻塞读（read），否则可能会因为被阻塞在一个描述符的读操作上而导致另一个描述符也无法处理。所以为了处理这种情况需要另一种不同的技术。让我们观察telnet(1)命令的结构，该程序从终端（标准输入）读，将所得数据写入到网络连接上，同时从网络连接读，将所得数据写到终端上（标准输出）。在网络另一端，telnetd守护进程读用户键入的命令，并将所读到的送给shell，这如同用户登录到远程机器一样。telnetd守护进程将执行用户键入命令而产生的输出通过telnet命令送回给用户，并显示在用户终端上。
 <center>
 
-![telent程序概观](figures\advanced-file-io\talnet.png)
+![telent程序概观](./figures/advanced-file-io/talnet.png)
 
 telnet程序概观
 </center>
@@ -83,7 +82,7 @@ telnet程序概观
 telnet进程有两个输入两个输出。我们不能对两个输出中任何一个使用阻塞read，因为我们不知道到底哪个输入会得到数据。处理这种问题的方法是，将一个进程变成两个进程（用fork），每个进程处理一条数据通路。下图显示了这种安排。
 <center>
 
-![telnet使用两个进程实现telnet程序](figures\advanced-file-io\talnettwothread.png)
+![telnet使用两个进程实现telnet程序](./figures/advanced-file-io/talnettwothread.png)
 
 telnet使用两个进程实现telnet程序
 </center>
@@ -105,7 +104,7 @@ telnet使用两个进程实现telnet程序
 在所有的POSIX兼容平台上，select函数使我们可以执行I/O多路转接。传给select的参数高速内核：
 
 * 我们关心的描述符；
-* 对于每一个描述符我们关心的条件（是否想从一个给定的描述符读，是否想写一个给定的描述符，是否想从一个给定的描述符的异常状态）；
+* 对于每一个描述符我们关心的条件（是否想从一个给定的描述符读，是否想写一个给定的描述符，是否关心一个给定的描述符的异常条件）；
 * 愿意等待多长时间（可以永远等待、等待一个固定的时间或者根本不等待）。
 
 从select返回时，内核告诉我们：
@@ -168,7 +167,7 @@ fds中元素的数目由nfds指定。
 应将每个数组元素的events成员设置为下图中的一个或几个，通过这些值高速内核我们关心的是每个描述符的那些事件。返回时，revents成员由内核设置，用于说明每个描述符发生了那些事情。
 <center>
 
-![poll的events和revents标志](figures\advanced-file-io\pollevents.png)
+![poll的events和revents标志](./figures/advanced-file-io/pollevents.png)
 
 poll的events和revents标志
 </center>
