deep into the kernel about memory management

--- a/12_高级IO.md
+++ b/12_高级IO.md
@@ -72,20 +72,20 @@ fcntl记录锁
             err_sys("write error");
 ```
 这种形式的阻塞I/O导出课件。但是如果必须从两个描述符读，又将如何呢？在这种情况下，我们不能在任一个描述符上进行阻塞读（read），否则可能会因为被阻塞在一个描述符的读操作上而导致另一个描述符也无法处理。所以为了处理这种情况需要另一种不同的技术。让我们观察telnet(1)命令的结构，该程序从终端（标准输入）读，将所得数据写入到网络连接上，同时从网络连接读，将所得数据写到终端上（标准输出）。在网络另一端，telnetd守护进程读用户键入的命令，并将所读到的送给shell，这如同用户登录到远程机器一样。telnetd守护进程将执行用户键入命令而产生的输出通过telnet命令送回给用户，并显示在用户终端上。
-<center>
+<div align=center>
 
 ![telent程序概观](./figures/advanced-file-io/talnet.png)
 
 telnet程序概观
-</center>
+</div>
 
 telnet进程有两个输入两个输出。我们不能对两个输出中任何一个使用阻塞read，因为我们不知道到底哪个输入会得到数据。处理这种问题的方法是，将一个进程变成两个进程（用fork），每个进程处理一条数据通路。下图显示了这种安排。
-<center>
+<div align=center>
 
 ![telnet使用两个进程实现telnet程序](./figures/advanced-file-io/talnettwothread.png)
 
 telnet使用两个进程实现telnet程序
-</center>
+</div>
 
 如果使用两个进程，则可使每个进程都执行阻塞read。但这也产生了问题：操作什么时候终止？如果子进程收到文件结束符（telnetd守护进程使网络连接断开），那么该子进程终止，然后父进程接收到SIGCHLD信号。但是如果父进程终止（如SIGUSR1），但这使程序更加复杂。
 
@@ -137,7 +137,11 @@ telnet使用两个进程实现telnet程序
                 fd_set *exceptfds, const struct timespec *timeout,
                 const sigset_t *sigmask);
 ```
-
+对于“准备好”的含义要做一些更具体的说明。
++ 若对读集中的一个描述符进行read操作不会阻塞，则认为此描述符是准备好的；
++ 若对写集中的一个描述符进行write操作不会阻塞，则认为此描述符是准备好的；
++ 若对异常条件集中的一个描述符有一个未决操作，则认为此描述符是准备好的。现在，异常条件包括：在网络连接上到达带外数据，或者处于数据包模式的伪终端上发生了某些条件；
++ 对于读、写和异常条件，普通文件的文件描述符总是返回准备好。
 
 ### 13.4.2 函数poll
 
@@ -165,23 +169,104 @@ poll函数类似于select，但是程序接口有所不同，poll函数可用于
 fds中元素的数目由nfds指定。
 
 应将每个数组元素的events成员设置为下图中的一个或几个，通过这些值高速内核我们关心的是每个描述符的那些事件。返回时，revents成员由内核设置，用于说明每个描述符发生了那些事情。
-<center>
+<div align=center> 
 
 ![poll的events和revents标志](./figures/advanced-file-io/pollevents.png)
 
 poll的events和revents标志
-</center>
+</div>
 
 当一个描述符被挂断后（POLLHUP），就不能再写该描述符，但是有可能仍然可以从该描述符读取到数据。
 
 poll的最后一个参数制定的是我们愿意等待多长时间。如同select一样。有三种不同的情形。
 
+与select一样，一个描述符是否阻塞不会影响poll是否阻塞。
+
 ## 13.5 异步I/O
 
-使用上一节说的select和poll可以实现异步形式的通知。关于描述符的状态，系统并不主动告诉我们任何消息，我们需要查询（调用select和poll）。信号机构提供了一种以异步形式的异步I/O，使用一个信号通知进程，对某个描述符关心的事件已经发生。在我们了解使用异步I/O的不同方法之前，需要先讨论下成本。在用异步I/O的时候，要通过选择来灵活处理多个并发操作，这会使得程序的设计复杂化。更简单的做法可能是使用多线程，使用同步模型来编写程序，并让这些线程以异步的方法运行。
+使用上一节说的select和poll可以实现异步形式的通知。关于描述符的状态，系统并不主动告诉我们任何信息，我们需要查询（调用select和poll）。信号机构提供了一种以异步形式的异步I/O，使用一个信号通知进程，对某个描述符关心的事件已经发生。我们在前面提到过，这种形式的异步I/O是受限制的：它们不能使用在所有的文件类型上，而且只能用一个信号。如果要对一个以上的描述符进行异步I/O，那么进程收到该信号时并不知道这一信号对应哪一个描述符。
+
+在我们了解使用异步I/O的不同方法之前，需要先讨论下成本。在用异步I/O的时候，要通过选择来灵活处理多个并发操作，这会使得程序的设计复杂化。更简单的做法可能是使用多线程，使用同步模型来编写程序，并让这些线程以异步的方法运行。
 
 使用POSIX异步I/O接口，会带来以下麻烦：
 
 * 每个异步操作有3处可能产生错误的地方：一处在操作提交的部分，一处在操作本身的结果，还有一处在用于决定异步操作状态的函数中。
 * 与POSIX异步I/O接口的传统方法相比，它们本身设计大量额外设置和处理规则。
 * 从错误中恢复可能会比较困难。
+
+### System V 异步I/O
+
+### BSD 异步I/O
+
+在BSD派生的系统中，异步I/O是信号SIGIO和SIGURG的组合。SIGIO是通过异步I/O信号，SIGURG则只是用来通知进程网络连接上的带外数据已经到达。
+
+为了接收SIGIO信号，需要执行以下3步：
+1. 调用signal或者sigaction为SIGIO信号建立信号处理程序；
+2. 以命令F_SETOWN调用fcntl来设置进程ID或进程组ID，用于接收对于该描述符的信号；
+3. 以命令F_SETFL调用fcntl设置O_ASYNC文件标志，使该描述符上可以进行异步I/O。
+
+第3步仅能对指向终端或网络的描述符执行，这是BSD异步I/O设施的一个基本限制。
+
+对于SIGURG信号，只需执行第1步和第2步。该信号仅对引用支持带外数据的网络连接符而产生，如TCP连接。
+
+## 13.6 函数readv和writev
+
+readv和writev函数用于在一次函数调用中读、写多个非连续缓冲区。有时也将这两个函数称为散布读和聚集写。
+```c
+    #include <sys/uio.h>
+
+    ssize_t readv(int fd, const struct iovec *iov, int iovcnt);
+
+    ssize_t writev(int fd, const struct iovec *iov, int iovcnt);
+
+    ssize_t preadv(int fd, const struct iovec *iov, int iovcnt,
+                   off_t offset);
+
+    ssize_t pwritev(int fd, const struct iovec *iov, int iovcnt,
+                    off_t offset);
+```
+该函数的第二个参数是指向iovec结构数组的一个指针：
+```c
+    struct iovec {
+        void  *iov_base;    /* Starting address */
+        size_t iov_len;     /* Number of bytes to transfer */
+    };
+```
+<div align=center>
+
+![readv和writev的iovec结构](./figures/advanced-file-io/writev.png)
+
+readv和writev的iovec结构
+</div>
+readv函数则将读入的数据按上述顺序散布到缓冲区中。readv总是先填满一个缓冲区，然后再填写下一个。readv返回读到的字节总数。如果遇到文件尾端，已无数据可读，则返回0。
+
+## 13.7 函数readn和writen
+
+管道、FIFO以及某些设备（特别是终端设备和网络）有下列两种性质。
+
+1. 一次read操作所返回的数据可能少于所要求的数据，即使还没达到文件尾端也可能是这样，这不是一个错误，应当继续读该设备。
+2. 一次write操作的返回值也可能少于指定的输入字节数。这可难是由某个因素造成的，例如，内核输出缓冲区变满。这也不是错误，应当继续写余下的数据。
+
+下面两个函数readn和writen的功能分别是读、写指定的N个字节数据，并处理返回值可能小于要求值的情况。这两个函数只是按需多次调用read和write直至读、写了N个字节。
+```c
+    ssize_t readn(int fd, void *buf, size_t nbytes);
+    ssize_t writen(int fd, void *buf, size_t nbytes);
+```
+
+## 13.8 储存映射I/O
+
+储存映射I/O能将一个磁盘文件映射到储存空间中的一个缓冲区上，于是，从缓冲区中读取数据时，就相当于读文件中的相应字节。于此类似，将数据存入缓冲区时，相应的字节就自动写入文件。这样就可以在不调用read和write的情况下执行I/O。
+
+为了使用这个功能，应首先告诉内核将一个给定文件映射到一个储存区中。这是由mmap函数实现的。
+```c
+    #include <sys/mman.h>
+
+    void *mmap(void *addr, size_t length, int prot, int flags,
+               int fd, off_t offset);
+    int munmap(void *addr, size_t length);
+```
+与储存区相关的信号有SIGSEGV和SIGBUS。信号SIGSEGV通常用于指示进程视图访问对它不可用的储存区。如果映射储存区被mmap指定成了可读的，那么进程视图将数据存入这个意思储存区的时候，也会产生此信号。如果映射区的某个部分访问时已不存在，则产生SIGBUS信号。
+
+子进程可以通过fork继承储存映射区（因为子进程复制父进程地址空间，而储存映射区是该地址空间的一部分），但是由于同样的原因，新程序不能通过exec继承储存映射区。
+
+当进程终止时，会自动解除储存映射区的映射，或者直接调用munmap函数也可以解除映射区。关闭映射储存区时使用的文件描述符并不解除映射区。munmap并不影响被映射的对象，也就是说，调用munmap并不会使映射区的内容写到磁盘文件上。对于MAP_SHARED区磁盘文件的更新，会在我们将数据谢安东储存映射区后某个时刻，按内核虚拟储存算法自动进行。在储存区解除映射后，对MAP_PRIVATE储存区的修改会被丢弃。
