review linux pthread

--- a/4_进程环境.md
+++ b/4_进程环境.md
@@ -1,4 +1,6 @@
-# 4 进程
+# 4 进程环境
+
+## 引言
 
 **程序和进程**
 
@@ -22,6 +24,13 @@
 
 每个进程在内核中都有一个进程控制块(PCB)来维护进程相关的信息，Linux内核进程控制块是task_struct结构体.
 
+<div align=center>
+
+![Linux进程描述符](./figures/process/processdescriptor.png)
+
+Linux进程描述符
+</div>
+
 * 进程id。系统中每个进程有唯一的id,在C语言中用pid_t类型表示,其实就是一个非负整数。
 * 进程的状态,有运行、挂起、停止、僵尸等状态。
 * 进程切换时需要保存和恢复的一些CPU寄存器。
@@ -40,7 +49,7 @@
 C程序总是从main函数开始执行。main函数的原型是：
 ```c
     int main(int argc, char *argv[]);
-```
+```   
 其中，`argc`是参数数目，`argv`是指向参数各个指针构成的数组。当内核执行C程序时，在调用`main`前先调用一个特殊的启动例程。可执行程序文件将此启动例程指定为**程序的起始地址**——这是由连接编辑器设置的，而连接编辑器是由C编译器调用。启动例程从内核获取命令行参数和环境变量值，然后为按上述方法调用main函数做好安排。
 
 ## 4.2 进程终止
@@ -59,7 +68,13 @@ C程序总是从main函数开始执行。main函数的原型是：
 7. 接收到一个信号；
 5. 最后一个线程对取消请求做出相应。
 
+上面提及的启动例程是这样编写的，使得从main返回后立即调用exit函数。如过将启动例程以C代码形式书写（实际上该例程常常用汇编代码编写），则它调用main函数的形式可能是：
+    exit(main(argc, argv));
+
 ### 4.2.1 退出函数
+
+3个函数用于正常终止一个程序：_exit和_Exit立即进入内核，exit则先执行一些清除处理，然后返回内核。
+
 ```c
     #include <stdlib.h>
 
@@ -71,9 +86,18 @@ C程序总是从main函数开始执行。main函数的原型是：
     void _exit(int status);
 ```
 
+由于历史原因，exit函数总是执行一个标准I/O库清理关闭操作：对于所有打开流调用fclose函数。这造成输出缓冲中的所有数据被冲洗（写到文件上）。
+
+3个退出函数都带有一个整形参数，称为终止状态（或退出状态）。大多数UNIX系统shell都提供检查进程中止状态的方法。如过（a）调用这些函数时不带终止状态，或（b）main执行了一个无返回值的return语句，或（c）main没有生命返回类型为整数，则该进程的终止状态是 **未定义** 的。但是，若main的返回类型是整形，并且main执行到最后一条语句是返回（隐式返回），那么该进程的终止状态是0。
+
+main函数返回一个整形和该函数调用exit是等价的。于是在main函数中
+    exit(0);
+等价于
+    return(0);
+
 ### 4.2.2 函数atexit
 
-按照ISO C的规定，一个进程最多可以登记至多32个函数，这些函数由exit自动调用。我们称这些函数为终止处理程序（exit handler），并调用函数来登记这些函数。
+按照ISO C的规定，一个进程最多可以登记至多32个函数，这些函数由exit自动调用。我们称这些函数为 **终止处理程序（exit handler）**，并调用函数来登记这些函数。
 
 ```c
     #include <stdlib.h>
@@ -83,9 +107,11 @@ C程序总是从main函数开始执行。main函数的原型是：
 
 其中，atexit的参数是一个函数地址，当调用此函数时无需向他传递任何参数，也不期望它返回一个值。exit调用这些函数的顺序与它们登记时的顺序相反。同一函数若登记多次，也会被调用多次。
 
-<center>![一个C程序是如何启动和终止的](./figures/process/Cprogram.png)
+<div align=center>
+
+![一个C程序是如何启动和终止的](./figures/process/Cprogram.png)
 一个C程序是如何启动和终止的
-</center>
+</div>
 
 注意，内核是程序执行的唯一方法是调用一个exec函数。进程自愿终止的唯一方法是显示或隐式调用_exit或_Exit。进程也可以非自愿地由一个信号使其终止。
 
@@ -100,10 +126,11 @@ C程序总是从main函数开始执行。main函数的原型是：
     extern char **environ;
 ```
 例如，如果该环境包含5个字符串，每个字符串结尾处都有显示地有一个null字节。我们称environ为环境指针，指针数组为环境表，其中个指针指向的字符串为环境字符串。可用getenv和putenv来访问特定的环境变量。
-<center>
+<div align=center>
+
 ![包含5个环境变量的environ环境表](./figures/process/envrionstring.png)
 包含5个环境变量的environ环境表
-</center>
+</div>
 
 ## 4.5 C程序的储存空间布局
 
